--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<title>Template for poll</title>
-
+	
+	<link href="https://fonts.googleapis.com/css?family=Sen:400,700,800&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="style.css">
 	<link rel="stylesheet" href="mediaQueries.css">
+
+	<script src="main.js" defer></script>
 </head>
 <body>
 
@@ -41,6 +44,6 @@
 
 	
 
-	<script src="main.js"></script>
+	
 </body>
 </html>
